--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "\n",
     "\n",
     "def f(x):\n",
-    "    return math.e **(-x**2) - 2*x"
+    "    return math.e**(-x**2) - 2*x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2.36787944117144*x*(1/2 - x/2)*(2/3 - x/3)*(3/4 - x/4) - 1.63212055882856*x*(3/2 - x/2)*(2 - x)*(x/2 + 1/2) - 1.99084218055563*x*(3 - x)*(x/3 + 1/3)*(x - 1) - 1.99995886339864*x*(x/4 + 1/4)*(x/2 - 1/2)*(x - 2) + 1.0*(1 - x)*(1 - x/2)*(1 - x/3)*(x + 1)\n",
+      "polynomial:-2.36787944117144*x*(1/2 - x/2)*(2/3 - x/3)*(3/4 - x/4) - 1.63212055882856*x*(3/2 - x/2)*(2 - x)*(x/2 + 1/2) - 1.99084218055563*x*(3 - x)*(x/3 + 1/3)*(x - 1) - 1.99995886339864*x*(x/4 + 1/4)*(x/2 - 1/2)*(x - 2) + 1.0*(1 - x)*(1 - x/2)*(1 - x/3)*(x + 1)\n",
       "Root: 0.3920149325128998\n"
      ]
     }
@@ -65,7 +65,7 @@
     "polynomial = 0\n",
     "for k in range(len(lagrange_coeffients)):\n",
     "    polynomial += function_output[k]*lagrange_coeffients[k]\n",
-    "print(polynomial)\n",
+    "print(f\"polynomial:{polynomial}\")\n",
     "\n",
     "\n",
     "# Example usage with Newton's method\n",
