--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -35,21 +35,21 @@
     "num_of_lagrange_coefficinet = len(function_input)\n",
     "\n",
     "x = symbols(\"x\")\n",
-    "lagrange_coeffients = []\n",
+    "lagrange_coefficients = []\n",
     "for i in range(num_of_lagrange_coefficinet):\n",
     "    #creating a list which decludes function_input[i] that is a number\n",
     "    new_list = [n for n in function_input  if n != function_input[i]]\n",
-    "    lagrange_coeffient = 1\n",
+    "    lagrange_coefficient = 1\n",
     "    for j in new_list:\n",
-    "        lagrange_coeffient *= (x - j)/(function_input[i]- j)\n",
-    "    lagrange_coeffients.append(lagrange_coeffient)\n",
+    "       lagrange_coefficient *= (x - j)/(function_input[i]- j)\n",
+    "    lagrange_coefficients.append(lagrange_coefficient)\n",
     "  \n",
-    "print(lagrange_coeffients)"
+    "print(lagrange_coefficients)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
